--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lobster|Open+Sans:400,700i,800');
+
 
 section{
     position: absolute;
@@ -64,4 +66,21 @@ div{
 }
 .c4{
     background-color: rgba(0,153,255,.3);
+}
+
+main{
+    position: absolute;
+    height: 150px;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 300;
+    text-align: center;
+    font-size: 60px;
+    font-family: 'Lobster', cursive;
+    color: white;
+}
+h1{
+    margin-top: 0;
+    text-shadow: 0 0 50px rgba(0,0,0,.5);
 }
